<resources>
    <string name="app_name">FoodApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_onboard_image">First Onboard Image</string>
    <string name="find_your_comfort">Find your Comfort</string>
    <string name="food_here">Food here</string>
    <string name="here_you_can_find_a_chef_or_dish_for_every_ntaste_and_color_enjoy">Here You Can find a chef or dish for every\ntaste and color. Enjoy!</string>
    <string name="next">Next</string>
    <string name="second_onboard_image">Second Onboard Image</string>
    <string name="food_ninja_is_where_your">Food Ninja is Where Your</string>
    <string name="comfort_food_lives">Comfort Food Lives</string>
    <string name="enjoy_a_fast_and_smooth_food_delivery_at_nyour_doorstep">Enjoy a fast and smooth food delivery at\nyour doorstep</string>
    <string name="get_started">Get Started</string>
    <string name="error_image">Error Image</string>
    <string name="we_encountered_a_problem">We encountered a problem</string>
    <string name="sign_up_image">Sign Up Image</string>
    <string name="sign_up_for_free">Sign Up For Free</string>
    <string name="name">Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="you_have_a_account_go_to_sign_in">You have a account? Go to Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_in_image">Sign In Image</string>
    <string name="login_to_your_account">Login To Your Account</string>
    <string name="forgot_your_password">Forgot Your Password?</string>
    <string name="don_t_have_a_account_go_to_sign_up">Don\'t have a account ? Go to Sign Up</string>
    <string name="find_your_nfavorite_food">Find Your\nFavorite Food</string>
    <string name="popular_restaurant_image">Popular Restaurant Image</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="home_title">Choose the</string>
    <string name="home_subtitle">Restaurant you love</string>
    <string name="categories">Categories</string>
    <string name="restaurants">Restaurants</string>
    <string name="food_name">Food Name</string>
    <string name="food_price">Food Price</string>
    <string name="food_description">Food Description</string>
    <string name="food_ingredients">Food Ingredients</string>
    <string name="add_ingredient">Add Ingredient</string>
    <string name="add_food">Add Food</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="restaurant_address">Restaurant Address</string>
    <string name="cuisine">Cuisine</string>
    <string name="minute">Minute</string>
    <string name="fee">Fee</string>
    <string name="delivery_info">Delivery Info</string>
    <string name="select_payments_method">Select Payments Method</string>
    <string name="add_restaurant">Add Restaurant</string>
    <string name="district">District</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="update_profile">Update Profile</string>
    <string name="minimum_delivery_fee">Minimum Delivery Fee</string>
    <string name="payments">Payments</string>
    <string name="menu">Menu</string>
    <string name="your_carts">Your Carts</string>
    <string name="confirm">Confirm</string>
    <string name="back_button">Back Button</string>
    <string name="description">Description</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="clear">Clear</string>
    <string name="image_url">Image Url</string>

    <string-array name="Cuisines">
        <item>Seafood</item>
        <item>Burger</item>
        <item>Doner</item>
        <item>Worldwide</item>
        <item>Homemade</item>
        <item>Breakfast</item>
        <item>Kebab</item>
        <item>Meatball</item>
        <item>Pasta - Salad</item>
        <item>Bakery</item>
        <item>Pizza</item>
        <item>Dessert</item>
        <item>Eastern Kitchen</item>
    </string-array>

    <string-array name="RestaurantPaymentMethods">
        <item>Online Credit/Bank Card</item>
        <item>Credit Card</item>
        <item>Cash</item>
        <item>Ticket Restaurant</item>
        <item>Sodexo Restaurant Pass</item>
        <item>Multinet</item>
        <item>SetCard</item>
    </string-array>

</resources>